2010-08-30 Florian Boor <florian@kernelconcepts.de>
	* Filter HAL and DBus users 

2009-04-15 Ned Ludd  <solar@gentoo.org>
	* gpe-base/gpe-login: gpe-logout.c Makefile.am 
	* Icon Dir Unification. /usr/share/gpe/pixmaps/ -> /usr/share/pixmaps/gpe/
	* Targeted for gpe-3.0 release.

2008-08-13  Phil Blundell  <pb@reciva.com>

	* Version 0.95 released.

2008-08-13  Phil Blundell  <pb@reciva.com>

	* po/gpe-login.pot: Update.

2008-08-13  Phil Blundell  <pb@reciva.com>

	* gpe-login.c (calibrate_hint_hook): Use a single string for
	better translatability.  Patch from Benno Schulenberg of the
	Translation Project.

	* configure.ac (ALL_LINGUAS): Auto-detect all PO files.

	* po/id.po, po/ja.po, po/sv.po, po/nl.po: Update from TP.
	* po/Makefile.in.in: New.

2008-08-10  Phil Blundell  <pb@reciva.com>

	* po/id.po: New translation, courtesy Andhika Padmawan.

	* po/gpe-login.pot: Update.

2008-08-06  Phil Blundell  <pb@reciva.com>

	* Version 0.94 released.
	
2008-08-06  Phil Blundell  <pb@reciva.com>

	* gpe-tp.am (dist-hook): New.

2008-06-06  Florian Boor <florian@kernelconcepts.de>

	* Release 0.93
	* gpe-logout.c: Improve window behaviour on large screens.

2008-05-23  Florian Boor <florian@kernelconcepts.de>

	* Release 0.92
	* gpe-logout: Set soem window parameters, center window.

2008-05-22  Florian Boor <florian@kernelconcepts.de>

	* Add logout/shutdown tool.
	* Translation update.

2008-02-22  Florian Boor <florian@kernelconcepts.de>

	* Apply patch to make screen locking work with display
	  rotatin/resizing. Fixes #152. Patch by Paul Skolovsky.
	* Apply patch to use xtscal directly. Fixes #124

2008-02-14  Florian Boor <florian@kernelconcepts.de>

	* Release 0.91
	* Fix security issue - patch courtesy by Paul Sokolovsky
	* Update translations, add new translations

2007-04-02  Florian Boor <florian@kernelconcepts.de>

	* Release 0.90

2007-04-01  Florian Boor <florian@kernelconcepts.de>

	* Convert to autotools
	