@@ -1,7 +1,14 @@
+2012-09-15 Philippe De Swert <philippedeswert@gmail.com>
+
+	* Fix some warnings
+	* Make sure gpe-login also links with -lX11
+
 2010-08-30 Florian Boor <florian@kernelconcepts.de>
+
 	* Filter HAL and DBus users 
 
 2009-04-15 Ned Ludd  <solar@gentoo.org>
+
 	* gpe-base/gpe-login: gpe-logout.c Makefile.am 
 	* Icon Dir Unification. /usr/share/gpe/pixmaps/ -> /usr/share/pixmaps/gpe/
 	* Targeted for gpe-3.0 release.
